...
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Weather" id="yaI-Y5-kZ1"/>
                    <connections>
                        <outlet property="setting" destination="tfl-in-VuU" id="LYQ-5O-xUN"/>
                        <outlet property="weatherDetailList" destination="rd3-u3-ViP" id="3Dv-Mh-Twm"/>
                        <outlet property="weatherDetailListHeader" destination="83F-sg-fOV" id="xZb-jl-RvW"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1047.8260869565217" y="99.776785714285708"/>
...
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kwT-eZ-BhO">
                                            <rect key="frame" x="10" y="5" width="394" height="34"/>
                                            <color key="tintColor" red="0.48806983230000001" green="0.42761087419999999" blue="0.41083699460000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <accessibility key="accessibilityConfiguration" identifier="cityName"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Sydney" textAlignment="right" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="eQB-0h-WuQ">
                                                    <rect key="frame" x="50.5" y="11" width="353.5" height="21"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="citySelection"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <textInputTraits key="textInputTraits"/>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
                                                            <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="cityName" destination="eQB-0h-WuQ" id="vB9-SV-I2m"/>
                        <outlet property="rightView" destination="5Ys-qy-27J" id="Vzh-Rr-LFi"/>
                        <outlet property="tempratureSegment" destination="6ua-2l-FIu" id="xGU-4E-Wnq"/>
                        <outlet property="windSegment" destination="9CQ-8Y-ACc" id="4I6-0c-day"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BJf-Fq-feG" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Ys-qy-27J">
                    <rect key="frame" x="0.0" y="0.0" width="19" height="25"/>
                    <subviews>
...
