...
    // MARK: View lifecycle
    
    override func viewDidLoad()
    {
        super.viewDidLoad()
        
        setting.accessibilityIdentifier = "settings"
        weatherDetailList.accessibilityIdentifier = "weatherDetailList"
        weatherDetailList.addRefreshControl(title: Localisable.refreshMessage) {
            self.interactor?.currentWeather(request: Weather.Request(cityName: self.theme.city.name, country: self.theme.city.country, appid: Constant.apiKey))
        }
        self.interactor?.currentWeather(request: Weather.Request(cityName: self.theme.city.name, country: self.theme.city.country, appid: Constant.apiKey))
    }
...
