...
    // MARK: View lifecycle
    
    override func viewDidLoad()
    {
        super.viewDidLoad()
        
        self.tableView.accessibilityIdentifier = "settingsTable"
        self.windSegment.accessibilityIdentifier = "windSegment"
        self.tempratureSegment.accessibilityIdentifier = "tempratureSegment"
        let currentTheme = self.theme

        cityName.text = currentTheme.city.name
        citySelectionController = self.storyboard?.instantiateViewController(withIdentifier: "SelectionViewControllerID") as? SelectionViewController
...
